# third-eye-client

./: Cargo.toml  Makefile  OPERATIONS.md  README.md  TODO.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: logo.icns
installer/: windows.nsi
macos/: Info.plist
scripts/: build_macos_app.sh  bump_patch_version.sh
src/: camera.rs  main.rs  map.rs  network.rs  nmea.rs  rov_status.rs
src/storage/: auth.rs  config.rs  db.rs  media.rs  mod.rs  tile_cache.rs
src/storage/migrations/: 002_map_tile_cache.sql
tests/: storage.rs
ui/: app.slint
