[package]
name = "third-eye-client"
version = "0.1.0"
edition = "2024"

[features]
default = []
test-tools = []

[[bin]]
name = "test_udp_server"
path = "src/bin/test_udp_server.rs"
required-features = ["test-tools"]

[dependencies]
anyhow = "1.0.100"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slint = { version = "1.13.1", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg"] }
webbrowser = "1.0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-location = { version = "0.2.2", default-features = false, features = ["std", "CLLocation", "CLLocationManager"] }
objc2 = "0.5.2"
