[package]
authors = ["marshalling"]
name = "third-eye-client"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[features]
default = []
test-tools = []

[[bin]]
name = "test_udp_server"
path = "src/bin/test_udp_server.rs"
required-features = ["test-tools"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22"
cookie = "0.18"
directories = "6"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
libc = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "cookies", "json", "rustls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11"
slint = { version = "1.16.1", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg"] }
serialport = "4"
socket2 = { version = "0.6", features = ["all"] }
uuid = { version = "1", features = ["v4", "serde"] }
if-addrs = "0.15"
webbrowser = "1.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-location = { version = "0.3.2", default-features = false, features = ["std", "CLLocation", "CLLocationManager"] }
objc2 = "0.6.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Devices_Geolocation", "Foundation"] }

[build-dependencies]
slint-build = "1.16.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[dev-dependencies]
mockito = "1"
tempfile = "3"
